added collapsible on delete many modals, and fix multiple ids on same page

--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -863,7 +863,7 @@ button.close {
     padding: 15px;
     border-bottom: 1px solid #e5e5e5;
 }
-#modalLabel {
+.modalLabel {
     max-height: calc(100vh - 300px);
     overflow-y: auto;
 }
