done: all new flash messages

--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -861,7 +861,7 @@ button.close {
 }
 .modal-header {
     padding: 15px;
-    border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px soligd #e5e5e5;
 }
 .modalLabel {
     max-height: calc(100vh - 300px);
