--- a/public/css/style.css
+++ b/public/css/style.css
@@ -75,6 +75,21 @@
     transition: mask-position 0.3s, -webkit-mask-position 0.3s;
 }
 
+/* Showing scroll only on hover of the content */
+.scrolly {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    mask-image: linear-gradient(to top, transparent, black),
+    linear-gradient(to left, transparent 17px, black 17px);
+    mask-size: 100% 20000px;
+    mask-position: left bottom;
+    -webkit-mask-image: linear-gradient(to top, transparent, black),
+    linear-gradient(to left, transparent 17px, black 17px);
+    -webkit-mask-size: 100% 20000px;
+    -webkit-mask-position: left bottom;
+    transition: mask-position 0.3s, -webkit-mask-position 0.3s;
+}
+
 .scroll:hover {
     -webkit-mask-position: left top;
 }
