--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,45 @@
 /*Font Rubik - import*/
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
 
+.stars-outer {
+    font-size: 20px;
+    display: inline-block;
+    position: relative;
+    font-family: FontAwesome, serif;
+}
+
+.stars-outer::before {
+    content: "\f006 \f006 \f006 \f006 \f006";
+}
+
+.stars-inner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 0;
+}
+
+.stars-inner::before {
+    content: "\f005 \f005 \f005 \f005 \f005";
+    color: #f8ce0b;
+}
+
+.attribution {
+    font-size: 12px;
+    color: #444;
+    text-decoration: none;
+    text-align: center;
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+    z-index: -1;
+}
+.attribution:hover {
+    color: #1fa67a;
+}
+
 .search {
     padding-bottom: 5px;
     padding-top: 5px;
