--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3234,26 +3234,28 @@ h4 {
 }
 @media (max-width: 1023px){
 
-    .small\:block{
-        display: block;
-    }
+    /* todo uncomment this later*/
 
-    .small\:hidden{
-        display: none;
-    }
+    /*.small\:block{*/
+    /*    display: block;*/
+    /*}*/
 
-    .small\:bg-gradient-to-r{
-        background-image: linear-gradient(to right, var(--tw-gradient-stops));
-    }
+    /*.small\:hidden{*/
+    /*    display: none;*/
+    /*}*/
 
-    .small\:from-green-400{
-        --tw-gradient-from: #34d399;
-        --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(52, 211, 153, 0));
-    }
+    /*.small\:bg-gradient-to-r{*/
+    /*    background-image: linear-gradient(to right, var(--tw-gradient-stops));*/
+    /*}*/
 
-    .small\:to-blue-500{
-        --tw-gradient-to: #3b82f6;
-    }
+    /*.small\:from-green-400{*/
+    /*    --tw-gradient-from: #34d399;*/
+    /*    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(52, 211, 153, 0));*/
+    /*}*/
+
+    /*.small\:to-blue-500{*/
+    /*    --tw-gradient-to: #3b82f6;*/
+    /*}*/
 }
 @media (min-width: 1536px){
 
