done search for public side i hope so

--- a/public/css/landing/custom.css
+++ b/public/css/landing/custom.css
@@ -121,3 +121,15 @@
 .ms-n5 {
     margin-left: -40px;
 }
+
+.blur {
+    filter: blur(20px);
+}
+
+.blur1 {
+    filter: blur(3px);
+}
+
+.blur2 {
+    filter: blur(2px);
+}
