--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -738,6 +738,7 @@ input[type="button"].btn-block {
 }
 .fadeM.in {
     opacity: 1;
+    z-index: 99999;
 }
 .collapse {
     display: none;
@@ -854,10 +855,12 @@ button.close {
 .modal-backdrop.fadeM {
     filter: alpha(opacity=0);
     opacity: 0;
+    z-index: 9999;
 }
 .modal-backdrop.in {
     filter: alpha(opacity=50);
     opacity: 0.5;
+    z-index: 9999;
 }
 .modal-header {
     padding: 15px;
