--- a/public/css/landing/custom.css
+++ b/public/css/landing/custom.css
@@ -133,3 +133,31 @@
 .blur2 {
     filter: blur(2px);
 }
+
+@-moz-keyframes roll {
+    100% {
+        -moz-transform: rotate(360deg);
+    }
+}
+@-o-keyframes roll {
+    100% {
+        -o-transform: rotate(360deg);
+    }
+}
+@-webkit-keyframes roll {
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+.istereg {
+    -moz-animation-name: roll;
+    -moz-animation-duration: 4s;
+    -moz-animation-iteration-count: 1;
+    -o-animation-name: roll;
+    -o-animation-duration: 4s;
+    -o-animation-iteration-count: 1;
+    -webkit-animation-name: roll;
+    -webkit-animation-duration: 4s;
+    -webkit-animation-iteration-count: 1;
+}
